# flopcards

./: .gitignore  Cargo.toml  input.css  input.html  localhost.html  log.rs  package-lock.json  package.json  schema.sql  script.js  serve.sh  tailwind.config.js
flashcards/geography/: mod.toml
flashcards/geography/hazards/: nature-of-hazards.toml
macros/: Cargo.toml
macros/src/: lib.rs
src/: components.rs  data.rs  main.rs  output.css
