[package]
name = "cupcakke-remixer"
version = "0.1.0"
edition = "2021"

[dependencies]
html-builder = { path = "../html-builder" }
http = "1.1.0"
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.7", features = ["full"] }
itertools = "0.13.0"
sqlx = { version = "0.8.2", features = ["mysql", "runtime-tokio"] }
tokio = { version = "1.39.3", features = ["full"] }
url = "2.5.2"
