[package]
name = "flopcards"
version = "0.1.0"
edition = "2021"

[dependencies]
async-recursion = "1.1.1"
futures = "0.3"
# html-builder = { git = "https://github.com/AlanRandon/html-builder.git" }
html-builder = { path = "../html-builder" }
http = "1.1"
http-body-util = "0.1"
hyper = { version = "1.4", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
itertools = "0.13"
libsql = "0.6"
reqwest = { version = "0.12", features = [
	"rustls-tls",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shuttle-runtime = "0.49"
shuttle-turso = "0.49"
thiserror = "2.0"
tokio = { version = "1.42", features = ["full"] }
url = "2.5.2"
uuid = "1.11.0"
